--- a/services/faster-whisper-service/Dockerfile
+++ b/services/faster-whisper-service/Dockerfile
@@ -1,7 +1,9 @@
 FROM nvidia/cuda:12.0.0-cudnn8-runtime-ubuntu20.04
-
+ENV DEBIAN_FRONTEND=noninteractive
 WORKDIR /app
-
+RUN apt-get update && apt-get install -y tzdata
+RUN ln -fs /usr/share/zoneinfo/Europe/Moscow /etc/localtime && \
+    dpkg-reconfigure --frontend noninteractive tzdata
 RUN apt-get update && apt-get install -y \
     python3.9 \
     python3-pip \
@@ -14,10 +16,10 @@ RUN python3.9 -m pip install --upgrade pip
 
 COPY requirements.txt .
 RUN pip install -r requirements.txt
-
+RUN pip install hf_transfer
 # Install PyTorch with CUDA support
 RUN pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu124
 COPY main.py .
 
 EXPOSE 8002
-CMD ["python", "main.py"]
+CMD ["python3.9", "main.py"]
